--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.csproj
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
