Added database configuration and added a localhost database address into appsettings.json.

--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=W4SRegistrationUserbase;Trusted_Connection=True;"
 }
