--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductManagement;Trusted_Connection=True;"
 }
