--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -20,11 +20,13 @@
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
-
-  <ItemGroup>
+	<ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Services\" />
   </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\W4SRegistrationMicroservice.Data\W4SRegistrationMicroservice.Data.csproj" />
+	</ItemGroup>
 
 </Project>
