Added Serilog, configured W4SUserbaseDbContext. Added a RegistrationService with an interface, empty methods with an exception try catch block.

--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.json
@@ -6,5 +6,25 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductManagement;Trusted_Connection=True;"
+  "ConnectionStrings": {
+    "W4SRegistrationUserbase": "Server=(localdb)\\mssqllocaldb;Database=W4SRegistrationUserbase;Trusted_Connection=True;"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Override": {
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C\\W4SRegistrationMicroserviceLogs\\log-.txt",
+          "fileSizeLimitBytes": 1073741824
+        }
+      }
+    ]
+  }
 }
