--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=W4SRegistrationUserbase;Trusted_Connection=True;"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "W4SRegistrationUserbase": "Server=(localdb)\\mssqllocaldb;Database=W4SRegistrationUserbase;Trusted_Connection=True;"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Override": {
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\W4SRegistrationMicroserviceLogs\\log-.txt",
+          "fileSizeLimitBytes": 1073741824
+        }
+      }
+    ]
+  }
 }
