Corrected creation DTOs and RegistrationService.

--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 	<ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Exceptions\" />
+    <Folder Include="Models\Users\Signing\" />
   </ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\W4SRegistrationMicroservice.Data\W4SRegistrationMicroservice.Data.csproj" />
