--- a/PostingService/src/PostingService.Console/PostingService.Console.csproj
+++ b/PostingService/src/PostingService.Console/PostingService.Console.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PostingService.Persistence\PostingService.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
