--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.9"
 services:
-  posting:
-    build:
-      context: ./PostingService
-      dockerfile: Dockerfile
-    restart: always
-    ports:
-      - 80:5000
-    networks:
-      - internal
-    environment:
-      CONNECTION_STRING: Host=posting-db;User=root;Password=root;Port=5432
+  #posting:
+  #build:
+  #context: ./PostingService
+  #dockerfile: Dockerfile
+  #restart: always
+  #ports:
+  #- 80:5000
+  #networks:
+  #- internal
+  #environment:
+  #CONNECTION_STRING: Host=posting-db;User=root;Password=root;Port=5432
 
   posting-db:
     image: postgres
