--- a/PostingService/src/PostingService.Console/PostingService.Console.csproj
+++ b/PostingService/src/PostingService.Console/PostingService.Console.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PostingService.Persistence\PostingService.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\ServiceBus\ServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
