Changed hashing, added a project for common services for Data and API

--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice.Data/W4SRegistrationMicroservice.Data.csproj
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice.Data/W4SRegistrationMicroservice.Data.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\W4SRegistrationMicroservice.CommonServices\W4SRegistrationMicroservice.CommonServices.csproj" />
+  </ItemGroup>
 </Project>
