--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "AuthenticationSettings": {
+    "JwtKey": "PRIVATE_KEY",
+    "JwtExpireDays": 1,
+    "JwtIssuer": "http://localhost:8080"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
