--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AuthenticationSettings": {
-    "JwtKey": "PRIVATE_KEY",
+    "JwtKey": "PRIVATE_KEY_JWTWORK",
     "JwtExpireDays": 1,
     "JwtIssuer": "http://localhost:8080"
   },
@@ -12,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "W4SRegistrationUserbase": "Server=(localdb)\\mssqllocaldb;Database=W4SRegistrationUserbase;Trusted_Connection=True;"
+    "W4SRegistrationUserbase": "Server=localhost\\SQLEXPRESS;Database=W4SRegistrationUserbase;Trusted_Connection=True;encrypt=false"
   },
   "Serilog": {
     "MinimumLevel": "Information",
