--- a/PostingService/src/PostingService.Console/PostingService.Console.csproj
+++ b/PostingService/src/PostingService.Console/PostingService.Console.csproj
@@ -8,14 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="ServiceBus" Version="0.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PostingService.Domain\PostingService.Domain.csproj" />
     <ProjectReference Include="..\PostingService.Persistence\PostingService.Persistence.csproj" />
-    <ProjectReference Include="..\..\..\ServiceBus\ServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
