--- a/PostingService/src/PostingService.Persistence/PostingService.Persistence.csproj
+++ b/PostingService/src/PostingService.Persistence/PostingService.Persistence.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PostingService.Domain\PostingService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
