--- a/W4SGateway/src/Gateway.Console/Gateway.Console.csproj
+++ b/W4SGateway/src/Gateway.Console/Gateway.Console.csproj
@@ -8,11 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+    <PackageReference Include="ServiceBus" Version="0.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\ServiceBus\ServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
