--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,35 @@
 version: "3.9"
 services:
-  #posting:
-  #build:
-  #context: ./PostingService
-  #dockerfile: Dockerfile
-  #restart: always
-  #ports:
-  #- 80:5000
-  #networks:
-  #- internal
-  #environment:
-  #CONNECTION_STRING: Host=posting-db;User=root;Password=root;Port=5432
+  posting:
+    build:
+      context: ./PostingService
+      dockerfile: Dockerfile
+    restart: always
+    depends_on: 
+      - servicebus
+    networks:
+      - internal
+    environment:
+      CONNECTION_STRING: Host=posting-db;User=root;Password=root;Port=5432
+      SERVICE_BUS_ADDRESS: servicebus
+    volumes:
+      - ./NugetPackages:/NugetPackages
+
+  gateway:
+    build:
+      context: ./W4SGateway
+      dockerfile: Dockerfile
+    restart: always
+    depends_on: 
+      - servicebus
+    ports:
+      - 80:5000
+    networks:
+      - internal
+    environment:
+      SERVICE_BUS_ADDRESS: servicebus
+    volumes:
+      - ./NugetPackages:/NugetPackages
 
   posting-db:
     image: postgres
@@ -34,6 +53,8 @@ services:
       - 15672:15672
     volumes:
       - servicebus-data:/var/lib/rabbitmq
+    networks:
+      - internal
 
 volumes:
   posting-data:
