improved service bus

--- a/PostingService/Dockerfile
+++ b/PostingService/Dockerfile
@@ -1,6 +1,11 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS builder
-RUN dotnet nuget add source /NugetPackages --name internal
-WORKDIR /PostingService
+RUN dotnet nuget add source http://172.104.241.57/repository/nuget-hosted/ --name nexus
+WORKDIR /Service
 COPY ./ ./
-WORKDIR /PostingService/src/PostingService.Console
-ENTRYPOINT ["dotnet", "run"]
+RUN dotnet build -c Release -o build
+
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS production
+WORKDIR /Service
+COPY --from=builder /Service/build .
+
+ENTRYPOINT ["dotnet", "PostingService.Console.dll"]
