improved service bus & build system

--- a/W4SGateway/Dockerfile
+++ b/W4SGateway/Dockerfile
@@ -1,6 +1,12 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS builder
-RUN dotnet nuget add source /NugetPackages --name internal
-WORKDIR /Gateway
+ARG MODE=Release
+RUN dotnet nuget add source http://172.104.241.57/repository/nuget-hosted/ --name nexus
+WORKDIR /Service
 COPY ./ ./
-WORKDIR /Gateway/src/Gateway.Console
-ENTRYPOINT ["dotnet", "run"]
+RUN dotnet build -c $MODE -o build
+
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS production
+WORKDIR /Service
+COPY --from=builder /Service/build .
+
+ENTRYPOINT ["dotnet", "Gateway.Console.dll"]
