--- a/PostingService/src/PostingService.Console/PostingService.Console.csproj
+++ b/PostingService/src/PostingService.Console/PostingService.Console.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
-    <PackageReference Include="ServiceBus" Version="0.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="W4S.ServiceBus" Version="0.8.0" />
   </ItemGroup>
 
   <ItemGroup>
