--- a/W4SGateway/src/Gateway.Console/Gateway.Console.csproj
+++ b/W4SGateway/src/Gateway.Console/Gateway.Console.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
-    <PackageReference Include="ServiceBus" Version="0.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="W4S.ServiceBus" Version="0.8.0" />
   </ItemGroup>
 
 </Project>
