--- a/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
+++ b/W4SRegistrationMicroservice/W4SRegistrationMicroservice/W4SRegistrationMicroservice.API.csproj
@@ -21,8 +21,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-    <PackageReference Include="ServiceBus" Version="0.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="W4S.ServiceBus" Version="0.8.0" />
   </ItemGroup>
 	<ItemGroup>
     <Folder Include="Models\Users\Signing\" />
