sdafouiasdyifnu7tscujixcjyfiwsedrcgh uiedfyw

--- a/W4S.PostingService/Dockerfile
+++ b/W4S.PostingService/Dockerfile
@@ -9,4 +9,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS production
 WORKDIR /Service
 COPY --from=builder /Service/build .
 
-ENTRYPOINT ["dotnet", "PostingService.Console.dll"]
+ENTRYPOINT ["dotnet", "W4S.PostingService.Console.dll"]
