--- a/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
+++ b/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="2.2.0" />
     <PackageReference Include="W4S.ServiceBus" Version="0.9.1" />
   </ItemGroup>
 
