--- a/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
+++ b/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Automapper" Version="12.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="W4S.RegistrationMicroService.Models" Version="2.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
