Copied jwt from RegistrationMicroservice, added authorization to JobOfferController.

--- a/W4S.Gateway/src/W4S.Gateway.Console/appsettings.Development.json
+++ b/W4S.Gateway/src/W4S.Gateway.Console/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "Urls": "http://0.0.0.0:5000"
+  "AuthenticationSettings": {
+    "JwtKey": "PRIVATE_KEY_JWTWORK",
+    "JwtExpireDays": 1,
+    "JwtIssuer": "http://localhost:80"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Urls": "http://0.0.0.0:5000"
 }
