--- a/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
+++ b/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="2.2.0" />
