--- a/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
+++ b/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
@@ -26,10 +26,8 @@
     <PackageReference Include="W4S.ServiceBus" Version="0.9.1" />
   </ItemGroup>
 	<ItemGroup>
-    <Folder Include="Models\Users\Signing\" />
-  </ItemGroup>
-	<ItemGroup>
 	  <ProjectReference Include="..\W4S.RegistrationMicroservice.Data\W4S.RegistrationMicroservice.Data.csproj" />
+	  <ProjectReference Include="..\W4S.RegistrationMicroservice.Models\W4S.RegistrationMicroservice.Models.csproj" />
 	</ItemGroup>
 
 </Project>
