--- a/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.Data/W4S.RegistrationMicroservice.Data.csproj
+++ b/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.Data/W4S.RegistrationMicroservice.Data.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
