--- a/W4S.PostingService/src/W4S.PostingService.Console/W4S.PostingService.Console.csproj
+++ b/W4S.PostingService/src/W4S.PostingService.Console/W4S.PostingService.Console.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="W4S.ServiceBus" Version="0.9.1" />
   </ItemGroup>
