--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - internal
     environment:
-      CONNECTION_STRING: Host=posting-db;User=root;Password=root;Port=5432
+      CONNECTION_STRING: Database=job-offers;Host=posting-db;User=root;Password=root;Port=5432
       BUS_BROKER_ADDRESS: servicebus
       SERVICE_NAME: Posting
 
@@ -57,19 +57,6 @@ services:
     networks:
       - internal
 
-  registration-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    ports:
-      - 1433:1433
-    networks:
-      - internal
-    environment:
-      ACCEPT_EULA: Y
-      MSSQL_SA_PASSWORD: Haxx0r2137
-    volumes:
-      - registration-data:/var/opt/mssql
-
   registration:
     build:
       context: ./W4S.RegistrationMicroservice
@@ -82,7 +69,7 @@ services:
     networks:
       - internal
     environment:
-      CONNECTION_STRING: Server=registration-db;Database=users;User Id=sa;Password=Haxx0r2137;TrustServerCertificate=True
+      CONNECTION_STRING: Database=users;Host=posting-db;User=root;Password=root;Port=5432
       BUS_BROKER_ADDRESS: servicebus
       SERVICE_NAME: Registration
 
