--- a/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
+++ b/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="W4S.PostingService.Domain" Version="0.4.0" />
+    <PackageReference Include="W4S.RegistrationMicroService.Models" Version="2.3.1" />
     <PackageReference Include="W4S.ServiceBus" Version="1.5.0" />
   </ItemGroup>
 
