--- a/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.Data/W4S.RegistrationMicroservice.Data.csproj
+++ b/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.Data/W4S.RegistrationMicroservice.Data.csproj
@@ -21,4 +21,8 @@
   <ItemGroup>
     <ProjectReference Include="..\W4S.RegistrationMicroservice.CommonServices\W4S.RegistrationMicroservice.CommonServices.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
