--- a/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
+++ b/W4S.Gateway/src/W4S.Gateway.Console/W4S.Gateway.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,7 +13,7 @@
     <PackageReference Include="W4S.PostingService.Domain" Version="0.4.0" />
     <PackageReference Include="W4S.RegistrationMicroService.Models" Version="2.3.1" />
     <PackageReference Include="W4S.ServiceBus" Version="1.5.0" />
-    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="2.3.1" />
+    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
