--- a/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
+++ b/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
@@ -22,11 +22,11 @@
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-    <PackageReference Include="W4S.ServiceBus" Version="2.0.0" />
-    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="2.6.2" />
+    <PackageReference Include="W4S.ServiceBus" Version="2.1.0" />
   </ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\W4S.RegistrationMicroservice.Data\W4S.RegistrationMicroservice.Data.csproj" />
+	  <ProjectReference Include="..\W4S.RegistrationMicroservice.Models\W4S.RegistrationMicroservice.Models.csproj" />
 	</ItemGroup>
 
 </Project>
