--- a/W4S.PostingService/src/W4S.PostingService.Console/W4S.PostingService.Console.csproj
+++ b/W4S.PostingService/src/W4S.PostingService.Console/W4S.PostingService.Console.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
