--- a/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
+++ b/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Automapper" Version="12.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="W4S.RegistrationMicroService.Models" Version="2.10.0" />
   </ItemGroup>
