--- a/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
+++ b/W4S.PostingService/src/W4S.PostingService.Domain/W4S.PostingService.Domain.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Automapper" Version="12.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSql" Version="7.0.1" />
     <PackageReference Include="W4S.RegistrationMicroService.Models" Version="3.2.7" />
   </ItemGroup>
 
