--- a/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
+++ b/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice/W4S.RegistrationMicroservice.API.csproj
@@ -23,8 +23,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="W4S.PostingService.Domain" Version="1.29.0" />
+    <PackageReference Include="W4S.PostingService.Models" Version="2.0.0" />
     <PackageReference Include="W4S.ServiceBus" Version="9.0.0" />
-    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="4.0.1" />
+    <PackageReference Include="W4S.RegistrationMicroservice.Models" Version="5.3.0" />
   </ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\W4S.RegistrationMicroservice.Data\W4S.RegistrationMicroservice.Data.csproj" />
