--- a/W4S.PostingService/Dockerfile
+++ b/W4S.PostingService/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS builder
 ARG MODE=Release
-RUN dotnet nuget add source http://172.104.241.57:2137/repository/nuget-hosted/ --name nexus
+RUN dotnet nuget add source https://studentdebil.chickenkiller.com/repository/nuget-hosted/  --name nexus
 WORKDIR /Service
 COPY ./ ./
 RUN dotnet build -c $MODE -o build
